# ChangeLog for app-i18n/ibus-pinyin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
  ibus-pinyin-0.1.1.20080901.ebuild:
  Simplify dependencies by using NEED_PYTHON

  03 Sep 2008; Hong Hao <oahong@gmail.com>
  +ibus-pinyin-0.1.1.20080901.ebuild, +ibus-pinyin-9999.ebuild,
  +metadata.xml:
  New ebuild for bug #236350
