@@ -1,6 +1,6 @@
 DIST ibus-pinyin-0.1.1.20080901.tar.gz 270905 RMD160 80a5b9fe08b37a64cbf392d3d0f236c10b2a34d2 SHA1 91859ebec591ac6192a8fe013f9040c534e4428e SHA256 888454c8b4656d74ec44dff7dbec95eb9936661320f353bb7965180ee5717df8
 DIST pinyin-database-0.1.10.5.tar.bz2 12044655 RMD160 3acfa16d11b2099d7719f3b7b5a77c523b982d2d SHA1 d0bb78416431a59cbcaf62809e56fab284f6d588 SHA256 113232304dd413663f046fff5e29e6eb6f8004f40588971b4aa4f09b3e34a00c
 EBUILD ibus-pinyin-0.1.1.20080901.ebuild 1342 RMD160 a6cb40fa110bbcc77116278e42e098b765d7c802 SHA1 9d80bd5c1a424c3dfd0ba7f28227671f03083ccc SHA256 ababbaaec5db9ec59deaf165dd04e73f2c7a432e9420ae4f276ba72b43dd48fd
-EBUILD ibus-pinyin-9999.ebuild 1477 RMD160 72af1a33ba017ce1e2fbfb835cc13d70a0ff60dd SHA1 95d02707f5b9cb076bc49839bbf4a1599ae6c9da SHA256 0d12bf55fbcdb766b4a5971833ddba920669ee22b8c9b8d9eff0b6213c9a6ad9
-MISC ChangeLog 414 RMD160 fe86f465e0249a6ecc096c0f3b386c9e4390c0f3 SHA1 45982dbaa3b703b563a140d23cd0f07d3a38d8b2 SHA256 4c04e3e55e1fa2b3795bae58e7a3a5747108827cfa0ed671cc55677c27769aa0
+EBUILD ibus-pinyin-9999.ebuild 1446 RMD160 d3cdf62cfc92af9e28cb66f5e466e7861ed99df9 SHA1 e5fa584ff4124fff6b22cf432f0e40da27e65f54 SHA256 6c7f3492bba8e347605ba7aa6dc8b88f7d8c61a0fadfd94b73eb9f4ae273b5bf
+MISC ChangeLog 543 RMD160 c04c4c17dacd898057cc9496bd941708f14c636b SHA1 73df5a234dd4d4c1641cf213bd1a3ce1e883782c SHA256 3c2c6bd68a09d83884f69c44663c9cdba5eb893b722c1c28dee2c6267b0d9efd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
